helm/values/laravel/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - tensorwarp.ai
        - develop.tensorwarp.ai
      secretName: laravel-kubernetes-tls
  rules:
    - host: tensorwarp.ai
      http:
        paths:
          - backend:
              serviceName: laravel-kubernetes-lamp
              servicePort: 80
    - host: develop.tensorwarp.ai
      http:
        paths:
          - backend:
              serviceName: laravel-kubernetes-lamp
              servicePort: 80
